Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,27 +307,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}\n"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -347,33 +347,21 @@
        "data": [
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
-         "type": "scatter",
-         "uid": "f8e6106e-e3aa-11e9-8f44-51a3d41d04da",
-         "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
-         ],
-         "y": [
-          [
-           2891000,
-           2800000,
-           2581000
-          ]
-         ]
+         "type": "bar",
+         "uid": "2cfe8b42-e3ab-11e9-8f44-51a3d41d04da"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"f8ec67b6-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1497ff4b-656b-4b4b-a3f0-dca7ab0f96b4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1497ff4b-656b-4b4b-a3f0-dca7ab0f96b4\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"2d1121a8-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"f8ec67b6-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1497ff4b-656b-4b4b-a3f0-dca7ab0f96b4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1497ff4b-656b-4b4b-a3f0-dca7ab0f96b4\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"2d1121a8-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -382,13 +370,10 @@
     {
      "data": {
       "text/plain": [
-       "{'type': 'scatter',\n",
-       " 'x': [['Buenos Aires', 'Toronto', 'Pyeongchang']],\n",
-       " 'y': [[2891000, 2800000, 2581000]],\n",
-       " 'text': [['Buenos Aires', 'Toronto', 'Pyeongchang']]}"
+       "{'type': 'bar', 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +422,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "scatter",
-         "uid": "9801092a-e3aa-11e9-8f44-51a3d41d04da",
+         "uid": "2ee78670-e3ab-11e9-8f44-51a3d41d04da",
          "x": [
           [
            "Buenos Aires",
@@ -458,7 +443,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "scatter",
-         "uid": "98010c2c-e3aa-11e9-8f44-51a3d41d04da",
+         "uid": "2ee7885a-e3ab-11e9-8f44-51a3d41d04da",
          "x": [
           [
            "Buenos Aires",
@@ -478,10 +463,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"7ced1c23-e0d1-43d5-a238-1f872a0e9b39\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7ced1c23-e0d1-43d5-a238-1f872a0e9b39\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"9810cb58-e3aa-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"9810cdd8-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"863123d2-24a0-4c85-9b3c-e07142558a76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"863123d2-24a0-4c85-9b3c-e07142558a76\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"2eebf520-e3ab-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"2eebf69c-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"7ced1c23-e0d1-43d5-a238-1f872a0e9b39\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7ced1c23-e0d1-43d5-a238-1f872a0e9b39\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"9810cb58-e3aa-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"9810cdd8-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"863123d2-24a0-4c85-9b3c-e07142558a76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"863123d2-24a0-4c85-9b3c-e07142558a76\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"2eebf520-e3ab-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"2eebf69c-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -496,7 +481,7 @@
        " 'text': [['Buenos Aires', 'Toronto', 'Pyeongchang']]}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
