Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,9 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
    ]
