--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,7 @@
    "outputs": [],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [area_values], 'text': [text_values]}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': text_values], 'y': [area_values], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}"
    ]
   },
