Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,18 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': text_values], 'y': [area_values], 'text': [text_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': text_values, 'y': area_values, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': text_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -430,54 +430,50 @@
        "data": [
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
-         "type": "scatter",
-         "uid": "2ee78670-e3ab-11e9-8f44-51a3d41d04da",
+         "type": "bar",
+         "uid": "bec810d4-e3ab-11e9-8f44-51a3d41d04da",
          "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "y": [
-          [
-           2891000,
-           2800000,
-           2581000
-          ]
+          2891000,
+          2800000,
+          2581000
          ]
         },
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
-         "type": "scatter",
-         "uid": "2ee7885a-e3ab-11e9-8f44-51a3d41d04da",
+         "type": "bar",
+         "uid": "bec814da-e3ab-11e9-8f44-51a3d41d04da",
          "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "y": [
-          [
-           4758,
-           2731571,
-           3194
-          ]
+          4758,
+          2731571,
+          3194
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"863123d2-24a0-4c85-9b3c-e07142558a76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"863123d2-24a0-4c85-9b3c-e07142558a76\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"2eebf520-e3ab-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"2eebf69c-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3edc2e49-46d6-42d2-ab33-41d2d82545ab\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3edc2e49-46d6-42d2-ab33-41d2d82545ab\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"becc73b8-e3ab-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"becc75ca-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"863123d2-24a0-4c85-9b3c-e07142558a76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"863123d2-24a0-4c85-9b3c-e07142558a76\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"2eebf520-e3ab-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"scatter\", \"uid\": \"2eebf69c-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3edc2e49-46d6-42d2-ab33-41d2d82545ab\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3edc2e49-46d6-42d2-ab33-41d2d82545ab\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"becc73b8-e3ab-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"becc75ca-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -486,13 +482,13 @@
     {
      "data": {
       "text/plain": [
-       "{'type': 'scatter',\n",
-       " 'x': [['Buenos Aires', 'Toronto', 'Pyeongchang']],\n",
-       " 'y': [[4758, 2731571, 3194]],\n",
-       " 'text': [['Buenos Aires', 'Toronto', 'Pyeongchang']]}"
+       "{'type': 'bar',\n",
+       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'y': [4758, 2731571, 3194],\n",
+       " 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
